--- a/behandlingar.html
+++ b/behandlingar.html
@@ -51,6 +51,8 @@
             <h5 id = "behandlingsRubrik"></h5>
         </div>
 
+        
+
           <section id="shortSection">
               <div class="container">
                 <div class="row">
@@ -90,9 +92,7 @@
               </div>
           </section>
 
-
           <div class="row">
-
 
             <div class="col-md-4">
               <table>
@@ -152,10 +152,10 @@
         <div class="accordion" id="accordionExample">
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingOne">
-            <button id = "dragspel1Rubrik" class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <button id = "dragspel1Rubrik" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
             </button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
             <div class="accordion-body">
 
               <ul>
@@ -202,7 +202,6 @@
         <div class="accordion-item">
           <h2 class="accordion-header" id="headingThree">
             <button  id = "dragspel3Rubrik"class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-              Accordion Item #3
             </button>
           </h2>
           <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
@@ -222,11 +221,11 @@
         </div>
 
         <div class="accordion-item">
-          <h2 class="accordion-header" id="headingOne">
-            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseOne">
             AVBOKNING</button>
           </h2>
-          <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
             <div class="accordion-body">
 
               <ul>
@@ -237,14 +236,31 @@
           </div>
         </div>
 
-
-
-
-
-
-
-
       </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+      
 
       <footer class="bg-dark text-white-50 text-start">
         &copy; 2023 Ideal Clinic | All rights reserved. 
@@ -254,3 +270,6 @@
 
 </body>
 </html>
+
+
+
