--- a/behandlingar.html
+++ b/behandlingar.html
@@ -20,7 +20,7 @@
 <body>
 
 <header>
-        <a href="Genjutsu.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
+        <a href="index.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
         <div class="hamburger-on"></div>
         <ul class="nav-links">
           <li><a id="bokaText" href="#">Boka </a></li>
