--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@
 
         <div class="text-div">
 
-          <button class ="introBtn">Månadens Kampanj</button>
-          <button class ="introBtn">Nya skönhetslagen</button>
-          <button class ="introBtn"><a href="#behandlingarAnchor">Våra behandlingar</a></button>
+          <button class ="introBtn"><a href="#monthlyAnchor" style="color: black; text-decoration: none;">Månadens Kampanj</a> </button>
+          <button class ="introBtn"><a href="#nyalagenAnchor" style="color: black; text-decoration: none;">Nya skönhetslagen</a> </button>
+          <button class ="introBtn"><a href="#behandlingarAnchor" style="color: black; text-decoration: none;">Våra behandlingar</a> </button>
+          
 
         </div>
 
@@ -139,8 +140,11 @@
         </div>
       </div>
 
+      <p id="nyalagenAnchor"></p>
+
 
       <div class="beautylawBox">
+
 
         <h3 id ="rubrikbeautyLaw">Ny skönhetslag</h3>
 
@@ -149,6 +153,7 @@
           <h5> På IDEAL CLINIC välkomnar vi den nya lagen, eftersom den ger ökad säkerhet och trygghet för dig som patient. 
           Från och med den 1 juli 2021 kan endast legitimerade sjukvårdspersonal utföra estetiska injektionsbehandlingar.</h6>
           <br>
+
 
           <p> Den nya lagen innebär att du måste genomgå en konsultation, antingen digitalt eller fysiskt, 
             innan du utför en injektionsbehandling. Du kan tidigast utföra en injektionsbehandling 2 dagar efter konsultationen. 
@@ -234,6 +239,8 @@
           </div>
 
 
+
+          <p id="monthlyAnchor"></p>
 
           <div class="image-container">
             <img src="./images/Belkyra.jpg" alt="description of your image">
