website pre webhost

--- a/behandlingar.html
+++ b/behandlingar.html
@@ -24,7 +24,7 @@
         <div class="hamburger-on"></div>
         <ul class="nav-links">
           <li><a id="bokaText" href="#">Boka </a></li>
-          <li><a href="#behandlingarAnchor">Behandlingar </a></li>
+          <li><a href="index.html">Behandlingar </a></li>
           <li><a href="priser.html">Priser </a></li>
           <li><a href="omoss.html">Om oss </a></li>
           <li><a href="kontakt.html">Kontakt </a></li>
@@ -82,7 +82,7 @@
                             <li class="list-group-item" id ="informationomRubrik"><h4>Information om:</h4><h6 id ="informationOm"></h6> </li>
                             <li class="list-group-item">Åldersgräns: 18</li>
                             <li class="list-group-item" id ="InfoCardPrice">Pris: från 1500kr</li>
-                            <li class="list-group-item">Räntefri avbetalning: Upp till 24 månader</li>
+                            <li class="list-group-item">Köp nu, betala sen! Via Qliro</li>
                             <li class="list-group-item"><button id ="infocardBooka">Boka</button></li>
 
                           </ul>
@@ -118,7 +118,7 @@
                     <img class ="funnyImage" src="./images/KostandsfriKonsultation.png" alt="">
                     <p>Konstandsfri konsultation</p>
                     <!-- lägg href här t boka.se på boka -->
-                    <p class = "funnyimageText">För kostnadsfri konsultation vänligen kontakta oss på 010-333-3553 eller klicka på <a id ="bokaSneaky"href="https://www.bokadirekt.se/places/ideal-clinic-50596">Boka</a></p>
+                    <p class = "funnyimageText" id ="konsultationstext">För kostnadsfri konsultation vänligen kontakta oss på 010-333-3553 eller klicka på <a id ="bokaSneaky"href="https://www.bokadirekt.se/places/ideal-clinic-50596">Boka</a></p>
 
                 </div>
               
