--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class ="Liseberg">
 
 
-        <div class="text-div">
+        <div class="text-div" id ="introBtnBox">
 
           <button class ="introBtn"><a href="#monthlyAnchor" style="color: black; text-decoration: none;">Månadens Kampanj</a> </button>
           <button class ="introBtn"><a href="#nyalagenAnchor" style="color: black; text-decoration: none;">Nya skönhetslagen</a> </button>
