--- a/kontakt.html
+++ b/kontakt.html
@@ -114,7 +114,7 @@
             <h5 class="text-center">KONTAKT INFO:</h5>
             <ul class="list-group">
               <li class="list-group-item">
-                <span class="fw-bold">Adress:</span> Smedjegatan 7
+                <span class="fw-bold">Adress:</span> Smedjegatan 7,
                 722 13 Västerås
               </li>
               <li class="list-group-item">
