--- a/kontakt.html
+++ b/kontakt.html
@@ -26,7 +26,7 @@
   <body>
 
       <header>
-        <a href="Index.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
+        <a href="index.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
         <div class="hamburger-on"></div>
         <ul class="nav-links">
           <li><a id="bokaText" href="https://www.bokadirekt.se/places/ideal-clinic-50596"> Boka </a></li>
