--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       </div>
 
       <header>
-        <a href="#" id="MainLogo" class="logoNav">Ideal Clinic</a>
+        <a href="index.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
         <div class="hamburger-on"></div>
         <ul class="nav-links">
           <li><a id="bokaText" href="https://www.bokadirekt.se/places/ideal-clinic-50596"> Boka </a></li>
