Inserted new textvalue

--- a/index.html
+++ b/index.html
@@ -34,7 +34,6 @@
 
       <div class="intro">
         <h1 class="logo-header">
-            <span  id ="logoLine" class="logo">|</span>
             <span class="logo">Ideal</span>
             <span class="logo" id ="logoCText">Clinic</span>
         </h1>
@@ -176,7 +175,7 @@
                 <table>
                   <p class = "behandlingsvarde">Profhilo</p>
                   <p class = "behandlingsvarde">Filler</p>
-                  <p class = "behandlingsvarde">Behandling mot <br> dubbelhaka</p>
+                  <p class = "behandlingsvarde">Behandling mot dubbelhaka</p>
                 </table>
               </div>
 
@@ -199,7 +198,7 @@
                 <p class="rubrikbehandling">Spänst</p>
 
                 <table>
-                  <p class = "behandlingsvarde">Rynkbehandling <br> Botox</p>
+                  <p class = "behandlingsvarde">Rynkbehandling Botox</p>
                   <p class = "behandlingsvarde">Microneedling</p>
                   <p class = "behandlingsvarde">Kemisk peeling</p>
                 </table>
