--- a/index.html
+++ b/index.html
@@ -90,17 +90,18 @@
 
       </div>
 
-        <section id="linkBar">
-            <div class="container">
-              <div  class="row">
-                <div class="col" id="links">
-                 &nbsp;<a href=""><i class="bi bi-facebook"></i></a>&nbsp;
-                 <a href="https://www.instagram.com/idealclinic.vst/"><i class="bi bi-instagram"></i></a>&nbsp;
-                  <i class="bi bi-telephone-fill"></i> 010-333 3553
-               </div>
-              </div> 
+      <section id="linkBar">
+        <div class="containera">
+          <div class="row">
+            <div class="col" id="links">
+              <a href=""><i class="bi bi-facebook"></i></a>
+              <a href="https://www.instagram.com/idealclinic.vst/"><i class="bi bi-instagram"></i></a>
+              <i class="bi bi-telephone-fill">010-333 3553</i>
             </div>
-          </section>
+          </div>
+        </div>
+      </section>
+      
 
 
       <div class="toast-container position-absolute top-0 end-0 p-3"></div>
@@ -114,23 +115,21 @@
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            Mars Kampanj!🤗 Tappat volym och känner dig slapp i ansiktet? Profhilo kur á 3 behandlingar 6000kr. (Ord. Paketpris 8500:-) Få bort fina linjer, acneärr & rynkor med Microneedling behandling för 895kr. (Ord. Pris 1495:-)
+            Juli Kampanj!🤗 Tappat volym och känner dig slapp i ansiktet? Profhilo kur á 3 behandlingar 6000kr. (Ord. Paketpris 8500:-) Få bort fina linjer, acneärr & rynkor med Microneedling behandling för 895kr. (Ord. Pris 1495:-)
           </div>
         </div>
       </div>
 
       <p id="nyalagenAnchor"></p>
 
-
       <div class="beautylawBox">
 
-
-        <h3 id ="rubrikbeautyLaw">Ny skönhetslag</h3>
+        <p id ="rubrikbeautyLaw">Ny skönhetslag</p>
 
         <br><br>
 
-          <h5> På IDEAL CLINIC välkomnar vi den nya lagen, eftersom den ger ökad säkerhet och trygghet för dig som patient. 
-          Från och med den 1 juli 2021 kan endast legitimerade sjukvårdspersonal utföra estetiska injektionsbehandlingar.</h6>
+          <p id ="cuteText"> På IDEAL CLINIC välkomnar vi den nya lagen, eftersom den ger ökad säkerhet och trygghet för dig som patient. 
+          Från och med den 1 juli 2021 kan endast legitimerade sjukvårdspersonal utföra estetiska injektionsbehandlingar.</p>
           <br>
 
 
