--- a/omoss.html
+++ b/omoss.html
@@ -69,19 +69,23 @@
         <div class="elias">
 
           <div class="card" style="width: 18rem;">
-            <img src="./images/Wuod.png" class="card-img-top" alt="...">
+            <img src="./images/EliasDone.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Elias Kaisoum</p>
             </div>
         </div>
 
       </div>
 
+      
+
+
+
         <div class="wuod">
           <div class="card" style="width: 18rem;">
-            <img src="./images/minbroorärklar.png" class="card-img-top" alt="...">
+            <img src="./images/Wuod.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">Wuod Kaisoum</p>
             </div>
           </div>
       </div>  
