Tandblekning underrubrik textstorlek

--- a/omoss.html
+++ b/omoss.html
@@ -102,3 +102,15 @@
 
   </body>
 </html>
+
+
+
+<!-- 
+<p class="rubrikbehandling">Lyster</p>
+<table>
+  <p class = "behandlingsvarde">Skinbooster</p>
+  <p class = "behandlingsvarde">Retinol peelin</p>
+  <p class = "behandlingsvarde">MicroTox</p>
+  <p class = "behandlingsvarde">PRX-T33</p>
+  <p class = "behandlingsvarde">Djuprengöring</p>
+</table> -->
