--- a/priser.html
+++ b/priser.html
@@ -835,7 +835,7 @@
 
 
 
-  <div class="accordion-item">
+  <!-- <div class="accordion-item">
     <h2 class="accordion-header" id="headingPRX-T33Microneedling">
         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapsePRX-T33Microneedling" aria-expanded="false" aria-controls="collapsePRX-T33Microneedling">
             Retinol Peeling
@@ -848,7 +848,7 @@
             <a href="https://www.bokadirekt.se/boka-tjanst/ideal-clinic-50596/retinol-peeling-kostnadsfri-konsultation-0--2050000" class="button-link">Boka</a>
     </div>
   </div>
-</div>
+</div> -->
 
 
 
