Updated according to Elias Notes

--- a/behandlingar.html
+++ b/behandlingar.html
@@ -36,11 +36,10 @@
       <div class="toast-container position-fixed bottom-0 end-0 p-3">
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
-            <strong class="me-auto">Välkommen!</strong>
+            <strong class="me-auto">Psst!</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            30% rabatt på samtliga behandlingar hela mars!
           </div>
         </div>
       </div>
@@ -61,14 +60,17 @@
                             <h2 id="shortH2">
                                 <span id="blueText">  <p id ="miniRubrik"></p></span>
                               </h2>
+                              <br>
                                 <div id = "textDiv">
                                       <p id="pshortText"></p>
+                                      <br>
                                       <p id ="miniRubrik2"></p>
                                       <p id ="firststyckeText"></p>
                                       <p id ="miniRubrik3"></p>
                                       <p id ="secondstyckeText"></p>
                                       <h6 id ="miniRubrik4"></h6>
                                       <p id ="thirdstyckeText"></p>
+                                      <br>
                                       <h6 id ="miniRubrik5"></h6>
                                       <p id = "fourthstyckeText"></p>
                                 </div>
