--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           <div class="row">
             <div class="col" id="links">
               <a href=""><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/idealclinic.vst/"><i class="bi bi-instagram"></i></a>
+              <a href="https://www.instagram.com/idealclinic.se/"><i class="bi bi-instagram"></i></a>
               <i class="bi bi-telephone-fill">010-333 3553</i>
             </div>
           </div>
@@ -111,11 +111,11 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <!-- <img src="" class="rounded me-2" alt="..."> -->
-            <strong class="me-auto">Välkommen!</strong>
+            <strong class="me-auto">Välkommen till Ideal Clinic - där skönhet blir till konst</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            Juli Kampanj!🤗 Tappat volym och känner dig slapp i ansiktet? Profhilo kur á 3 behandlingar 6000kr. (Ord. Paketpris 8500:-) Få bort fina linjer, acneärr & rynkor med Microneedling behandling för 895kr. (Ord. Pris 1495:-)
+            Upplev enastående estetik och skräddarsydda behandlingar för din naturliga skönhet. Boka idag och låt oss skapa en vacker framtid tillsammans!
           </div>
         </div>
       </div>
@@ -271,14 +271,13 @@
                                       <span class="fw-bold">Email:</span> Info@idealclinic.se
                                   </li>
                               </ul>
-                            
                             </div>
                           </div>
                           </div>  
+                          <br>
 
                           <div class="col" id ="gogoCol">
                             <h5 class="text-center">PLATS:</h5>
-
                               <iframe 
                               src="https://maps.google.com/maps?q=Smedjegatan%207,%20722%2013%20V%C3%A4ster%C3%A5s&t=&z=17&ie=UTF8&iwloc=&output=embed"
                               width="400" id="gogomaps" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
