--- a/priser.html
+++ b/priser.html
@@ -47,12 +47,11 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <!-- <img src="" class="rounded me-2" alt="..."> -->
-            <strong class="me-auto">Välkommen!</strong>
+            <strong class="me-auto">Köp nu, betala sen! Via Qliro
+            </strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
-          <div class="toast-body">
-            30% rabatt på samtliga behandlingar hela mars!
-          </div>
+          
         </div>
       </div>
 
