--- a/behandlingar.html
+++ b/behandlingar.html
@@ -23,7 +23,7 @@
         <a href="index.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
         <div class="hamburger-on"></div>
         <ul class="nav-links">
-          <li><a id="bokaText" href="#">Boka </a></li>
+          <li><a id="bokaText" href="https://www.bokadirekt.se/places/ideal-clinic-50596"> Boka </a></li>
           <li><a href="index.html">Behandlingar </a></li>
           <li><a href="priser.html">Priser </a></li>
           <li><a href="omoss.html">Om oss </a></li>
@@ -44,10 +44,10 @@
         </div>
       </div>
 
-        <div id ="niceHair" class="container1">
-            <img id ="hairPic" src="./images/niceHair.jpg" alt="">
-            <h5 id = "behandlingsRubrik"></h5>
-        </div>
+          <div class="container1">
+              <img id ="hairPic" src="./images/niceHair.jpg" alt="">
+              <h5 id = "behandlingsRubrik"></h5>
+          </div>
 
           <section id="shortSection">
               <div class="container">
