--- a/index.html
+++ b/index.html
@@ -52,9 +52,7 @@
       </header>
 
 
-
       <div class ="Liseberg">
-
 
         <div class="text-div" id ="introBtnBox">
 
@@ -136,8 +134,7 @@
           <p> Den nya lagen innebär att du måste genomgå en konsultation, antingen digitalt eller fysiskt, 
             innan du utför en injektionsbehandling. Du kan tidigast utföra en injektionsbehandling 2 dagar efter konsultationen. 
             Detta gäller för dig som är en ny patient eller inte har utfört injektionsbehandling på det område som önskas behandlas
-            inom de senaste 6 månaderna. Vi rekommenderar en konsultation på plats, men det går även att få via mejl, telefon eller 
-            digitalt om det på grund av avstånd eller annat inte är möjligt att närvara fysiskt.</p>
+            inom de senaste 6 månaderna. Vi rekommenderar en konsultation på plats, Vi rekommenderar en konsultation på plats men det går även att få digitalt via telefon.</p>
             <p id="behandlingarAnchor">	</p>
 
       </div>
@@ -291,11 +288,11 @@
                                 <div class="col-md">
                                     <h5 class="text-center">ÖPPETTIDER:</h5>
                                     <ul class="list-group" class = "text-center">
-                                      <li class="list-group-item">Måndag: 08:00–19:00</li>
-                                      <li class="list-group-item">Tisdag: 08:00–19:00</li>
-                                      <li class="list-group-item">Onsdag: 08:00–19:00</li>
-                                      <li class="list-group-item">Torsdag: 08:00–19:00</li>
-                                      <li class="list-group-item">Fredag: 08:00–19:00</li>
+                                      <li class="list-group-item">Måndag: 10:00–19:00</li>
+                                      <li class="list-group-item">Tisdag: 10:00–19:00</li>
+                                      <li class="list-group-item">Onsdag: 10:00–19:00</li>
+                                      <li class="list-group-item">Torsdag: 10:00–19:00</li>
+                                      <li class="list-group-item">Fredag: 10:00–19:00</li>
                                       <li class="list-group-item">Helg: Varierande</li>
                                     </ul>
                                 </div>
