--- a/behandlingar.html
+++ b/behandlingar.html
@@ -87,7 +87,7 @@
                             <li class="list-group-item">Åldersgräns: 18</li>
                             <li class="list-group-item" id ="InfoCardPrice">Pris: från 1500kr</li>
                             <li class="list-group-item">Köp nu, betala sen! Via Qliro</li>
-                            <li class="list-group-item"><button id ="infocardBooka">Boka</button></li>
+                            <li class="list-group-item"><a id ="infocardBooka" href="https://www.bokadirekt.se/places/ideal-clinic-50596#book">Boka</a></li>
 
                           </ul>
                         </div>
