--- a/omoss.html
+++ b/omoss.html
@@ -43,7 +43,7 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <!-- <img src="" class="rounded me-2" alt="..."> -->
-            <strong class="me-auto">Missade inte de senaste erbjudandena och nyheterna! Följ oss på Instagram för att hålla dig uppdaterad och ta del av exklusiva erbjudanden! <a href="https://www.instagram.com/idealclinic.se/"> Instagram</a></strong> 
+            <p class="me-auto">Missade inte de senaste erbjudandena och nyheterna! Följ oss på Instagram för att hålla dig uppdaterad och ta del av exklusiva erbjudanden! <a href="https://www.instagram.com/idealclinic.se/"> Instagram</a></p> 
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
         </div>
