ContactForm Finished and minor fixes

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
 
 
       <div class="intro">
-        <h1 class="logo-header">
+        <p class="logo-header">
             <span class="logo">Ideal</span>
             <span class="logo" id ="logoCText">Clinic</span>
-        </h1>
+        </p>
       </div>
 
       <header>
@@ -152,7 +152,7 @@
 
                 <table>
                   <p class = "behandlingsvarde">Rynkbehandling Botox</p>
-                  <p class = "behandlingsvarde">Microneedling</p>
+                  <p class = "behandlingsvarde">Microneedling/Hudbristning</p>
                   <p class = "behandlingsvarde">Kemisk peeling</p>
                 </table>
                 <br><br>
@@ -162,12 +162,14 @@
               </div>
 
               <div class="col">
-                <p class="rubrikbehandling">Kropp</p>
+
+                <p class="rubrikbehandling">Lyster</p>
                 <table>
-                  <p class = "behandlingsvarde">Svettbehandling</p>
-                  <p class = "behandlingsvarde">Ärrbehandling</p>
-                  <p class = "behandlingsvarde">Hudbristning</p>
+                  <p class = "behandlingsvarde">Skinbooster</p>
+                  <p class = "behandlingsvarde">Retinol Peeling</p>
+                  <p class = "behandlingsvarde">MicroTox</p>
                 </table>
+
                 <br><br>
 
               </div>
@@ -181,7 +183,6 @@
                   <p class = "behandlingsvarde">Behandling mot dubbelhaka</p>
                 </table>
                 <br><br>
-
               </div>
 
             </div>
@@ -200,13 +201,12 @@
 
               <div class="col">
              
-                <p class="rubrikbehandling">Lyster</p>
+                <p class="rubrikbehandling">Kropp</p>
                 <table>
-                  <p class = "behandlingsvarde">Skinbooster</p>
-                  <!-- <p class = "behandlingsvarde">Retinol peelin</p> -->
-                  <p class = "behandlingsvarde">MicroTox</p>
+                  <p class = "behandlingsvarde">Svettbehandling</p>
+                  <p class = "behandlingsvarde">Ärrbehandling</p>
                   <p class = "behandlingsvarde">PRX-T33</p>
-                  <p class = "behandlingsvarde">Djuprengöring</p>
+
                 </table>
                 <br><br>
 
@@ -215,6 +215,7 @@
               <div class="col">
                 <p class="rubrikbehandling">Övrigt</p>
                 <table>
+                  <p class = "behandlingsvarde">Djuprengöring</p>
                   <p class = "behandlingsvarde">Tandblekning</p>
                   <p class = "behandlingsvarde">Migränbehandling</p>
                   <p class = "behandlingsvarde">Klassisk ansiktsbehandling</p>
@@ -222,7 +223,6 @@
                 <br><br>
               </div>
             </div>
-
           </div>
 
 
