--- a/omoss.html
+++ b/omoss.html
@@ -52,7 +52,9 @@
 
       <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
         <div class="col-md-5 p-lg-5 mx-auto my-5">
-          <h1 class="display-4 font-weight-normal">Om oss på <br> Ideal Clinic</h1>
+          <h1 class="display-4 font-weight-normal">Om oss på</h1>
+          <h1 class="display-4 font-weight-normal" id ="lustig">Ideal Clinic</h1>
+
           <p class="lead font-weight-normal">- där skönhet blir till konst.</p>
         </div>
         <div class="product-device box-shadow d-none d-md-block"></div>
