--- a/kontakt.html
+++ b/kontakt.html
@@ -71,22 +71,21 @@
           <div class="row">
            
             <div class="col-lg-4 col-md-6 col-sm-12">
-
               <div class="container">
                 <form id="contact" action="https://formspree.io/f/xbjvrqwn" method="POST">
                   <h3>Kontaktforumlär</h3>
                   <h4>Skriv idag, få svar inom 24 timmar!</h4>
                   <fieldset>
-                    <input name="name" placeholder="Namn" type="text" tabindex="1" required autofocus>
+                    <input name="name" placeholder="Namn" type="text" tabindex="1" required autofocus autocomplete="off">
                   </fieldset>
                   <fieldset>
-                    <input name="_replyto" placeholder="Email" type="email" tabindex="2" required>
+                    <input name="_replyto" placeholder="Email" type="email" tabindex="2" required autocomplete="off">
                   </fieldset>
                   <fieldset>
-                    <input name="phone" placeholder="Telefon" type="tel" tabindex="3" required>
+                    <input name="phone" placeholder="Telefon" type="tel" tabindex="3" required autocomplete="off">
                   </fieldset>
                   <fieldset>
-                    <textarea name="message" placeholder="Skriv ditt meddelande..." tabindex="5" required></textarea>
+                    <textarea name="message" placeholder="Skriv ditt meddelande..." tabindex="5" required autocomplete="off"></textarea>
                   </fieldset>
                   <button type="submit" id="contact-submit">Skicka</button>
                 </form>
