--- a/omoss.html
+++ b/omoss.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OmOss-IdealClinic</title>
     <link rel="stylesheet" href="styles/omstyles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <script src="./js/app.js" defer></script>
@@ -22,20 +22,23 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
   <!-- Bootstrap JavaScript -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js" integrity="sha512-kmCEv+RdrnW8HpLUMjw28SwMkZENp90piASBcNlBz9XhjvDrcnz2yzawTmFTdGjimL80h+n3ndqgJrDtpxStlw==" crossorigin="anonymous"></script>
   </head>
   
   <body>
+    
+
       <header>
         <a href="index.html" id="MainLogo" class="logoNav">Ideal Clinic</a>
         <div class="hamburger-on"></div>
-        <ul class="nav-links">
-          <li><a id="bokaText" href="https://www.bokadirekt.se/places/ideal-clinic-50596"> Boka </a></li>
-          <li><a href="index.html">Behandlingar </a></li>
-          <li><a href="priser.html">Priser </a></li>
-          <li><a href="omoss.html">Om oss </a></li>
-          <li><a href="kontakt.html">Kontakt </a></li>
-        </ul>
+        <nav>
+          <ul class="nav-links">
+            <li><a id="bokaText" href="https://www.bokadirekt.se/places/ideal-clinic-50596">Boka</a></li>
+            <li><a href="index.html">Behandlingar</a></li>
+            <li><a href="priser.html">Priser</a></li>
+            <li><a href="omoss.html">Om oss</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+          </ul>
+        </nav>
       </header>
       
       <div class="toast-container position-absolute top-0 end-0 p-3"></div>
