--- a/behandlingar.html
+++ b/behandlingar.html
@@ -45,7 +45,7 @@
       </div>
 
           <div class="container1">
-              <img id ="hairPic" src="./images/niceHair.jpg" alt="">
+              <img id ="hairPic" src="" alt="">
               <h5 id = "behandlingsRubrik"></h5>
           </div>
 
