--- a/index.html
+++ b/index.html
@@ -109,11 +109,17 @@
         <div class="toast toast-bottom-center" id="toast-example" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <!-- <img src="" class="rounded me-2" alt="..."> -->
-            <strong class="me-auto">Välkommen till Ideal Clinic - där skönhet blir till konst</strong>
+            <strong class="me-auto">Ett gyllene leende med Fillers fest!</strong>
             <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
           </div>
           <div class="toast-body">
-            Upplev enastående estetik och skräddarsydda behandlingar för din naturliga skönhet. Boka idag och låt oss skapa en vacker framtid tillsammans!
+            🌟 FÅ 20% RABATT på Fillers Behandlingar! 🌟<br>
+
+            🌟Få 20% rabatt på tandblekning 🌟
+
+            <br><br> <small> Obs! Gäller inte "paketpris"
+            Erbjudandet gäller under hela augusti månad.
+            Ingen rabattkod behövs, priset justeras på plats vid betalning. Vänligen, Ideal Clinic</small>
           </div>
         </div>
       </div>
