--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 
     <!-- Bootstrap CSS -->
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-HZuXMlz/2k7CJ/6G9V7NlY6UjhKzlUuJ6GrdeVSKuLKglZK2QZuG1I9CB7VvSp6/mk+x6yIwDwzU6bRzKjSfrA==" crossorigin="anonymous" />
+<!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-HZuXMlz/2k7CJ/6G9V7NlY6UjhKzlUuJ6GrdeVSKuLKglZK2QZuG1I9CB7VvSp6/mk+x6yIwDwzU6bRzKjSfrA==" crossorigin="anonymous" /> -->
 
 <!-- Bootstrap JavaScript -->
-<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js" integrity="sha512-kmCEv+RdrnW8HpLUMjw28SwMkZENp90piASBcNlBz9XhjvDrcnz2yzawTmFTdGjimL80h+n3ndqgJrDtpxStlw==" crossorigin="anonymous"></script>
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/js/bootstrap.bundle.min.js" integrity="sha512-kmCEv+RdrnW8HpLUMjw28SwMkZENp90piASBcNlBz9XhjvDrcnz2yzawTmFTdGjimL80h+n3ndqgJrDtpxStlw==" crossorigin="anonymous"></script> -->
 
 
   </head>
@@ -29,7 +29,7 @@
 
       <div class="intro">
         <p class="logo-header">
-            <span class="logo">Ideal</span>
+            <span class="logo">Ideal</span><br>
             <span class="logo" id ="logoCText">Clinic</span>
         </p>
       </div>
@@ -110,7 +110,7 @@
           <div class="toast-body">
             🌟 FÅ 20% RABATT på Fillers Behandlingar! 🌟<br>
 
-            🌟Få 20% rabatt på tandblekning 🌟
+            🌟Få 20% rabatt på Tandblekning 🌟
 
             <br><br> <small> Obs! Gäller inte "paketpris"
             Erbjudandet gäller under hela augusti månad.
@@ -212,8 +212,20 @@
           <p id="monthlyAnchor"></p>
 
           <div class="image-container">
-            <img src="./images/Belkyra.jpg" alt="description of your image">
+            <div id="kampanjbildtext">
+              <div id="kampanjbildtext1">
+                <h2 id="kampanjrubrik1"></h2>
+                 <h4 id="kampanjrubrik2">🌟 FÅ 20% RABATT på Fillers & Tandblekning under hela augusti månad!</h4> 
+                
+                <h4 id="kampanjrubrik3"></h4>
+                <p>Ingen rabattkod behövs, priset justeras på plats vid betalning. </p>
+                <small>Obs! Gäller inte "paketpris"
+                </small>
+              </div>
+              <img src="./images/kampanjbild.png" alt="Kampanj">
+            </div>
           </div>
+
                 <div id="almostDone">
 
                   <div class="container text-center" id ="footerDiv">
