--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
       <div class="intro">
         <p class="logo-header">
-            <span class="logo">Ideal</span><br>
-            <span class="logo" id ="logoCText">Clinic</span>
+            <span class="logo">Ideal</span>
+            <span class="logo">Clinic</span>
         </p>
       </div>
 
